--- a/roles/maw_solr/tasks/configure_solr.yml
+++ b/roles/maw_solr/tasks/configure_solr.yml
@@ -1,43 +1,43 @@
 - name: create multimedia-categories core
   ansible.builtin.command:
-    cmd: "podman exec -it {{ mawus_solr__container }} solr create_core -c multimedia-categories"
+    cmd: "podman exec -it {{ maw_solr__container }} solr create_core -c multimedia-categories"
   changed_when: true
   ignore_errors: true
   tags: skip_ansible_lint
 
 - name: disable data driven schema
   ansible.builtin.command:
-    cmd: "podman exec -it {{ mawus_solr__container }} solr config -c multimedia-categories -p 8983 -action set-user-property -property update.autoCreateFields -value false"
+    cmd: "podman exec -it {{ maw_solr__container }} solr config -c multimedia-categories -p 8983 -action set-user-property -property update.autoCreateFields -value false"
   changed_when: true
 
 - name: Ensure temp dir exists
   ansible.builtin.file:
-    path: "{{ mawus_solr__tempdir }}"
+    path: "{{ maw_solr__tempdir }}"
     state: directory
     mode: u+rw
 
 - name: Copy synonym file
   ansible.builtin.copy:
     src: solr_synonyms.txt
-    dest: "{{ mawus_solr__tempdir }}"
+    dest: "{{ maw_solr__tempdir }}"
     mode: u+rw
 
 - name: configure synonyms
   ansible.builtin.include_role:
     name: podman_copy
   vars:
-    pod_cp__src_dir_or_volume: "{{ mawus_solr__tempdir }}"
-    pod_cp__dest_dir_or_volume: "{{ mawus_solr__volume }}"
+    pod_cp__src_dir_or_volume: "{{ maw_solr__tempdir }}"
+    pod_cp__dest_dir_or_volume: "{{ maw_solr__volume }}"
     pod_cp__command: cp -R /src/. /dest/data/multimedia-categories/conf
 
 - name: cleanup temp dir
   ansible.builtin.file:
-    path: "{{ mawus_solr__tempdir }}"
+    path: "{{ maw_solr__tempdir }}"
     state: absent
 
 - name: reload core for synonyms to take effect
   ansible.builtin.command:
-    cmd: "podman exec -it {{ mawus_solr__container }} curl 'http://127.0.0.1:8983/solr/admin/cores?action=RELOAD&core=multimedia-categories'"
+    cmd: "podman exec -it {{ maw_solr__container }} curl 'http://127.0.0.1:8983/solr/admin/cores?action=RELOAD&core=multimedia-categories'"
   changed_when: true
 
 - name: add / update unique key
@@ -54,12 +54,12 @@
 
 - name: redefine unique key
   ansible.builtin.command:
-    cmd: "podman exec -it {{ mawus_solr__container }} sed -i -E 's/(<uniqueKey>)id(<.uniqueKey>)/\\1solr_id\\2/' /var/solr/data/multimedia-categories/conf/managed-schema"
+    cmd: "podman exec -it {{ maw_solr__container }} sed -i -E 's/(<uniqueKey>)id(<.uniqueKey>)/\\1solr_id\\2/' /var/solr/data/multimedia-categories/conf/managed-schema"
   changed_when: true
 
 - name: reload core so we don't loose the edit of updating the unique key
   ansible.builtin.command:
-    cmd: "podman exec -it {{ mawus_solr__container }} curl 'http://127.0.0.1:8983/solr/admin/cores?action=RELOAD&core=multimedia-categories'"
+    cmd: "podman exec -it {{ maw_solr__container }} curl 'http://127.0.0.1:8983/solr/admin/cores?action=RELOAD&core=multimedia-categories'"
   changed_when: true
 
 - name: add fields to schema
@@ -327,21 +327,21 @@
 
 - name: check if custom request handler is defined
   ansible.builtin.command:
-    cmd: "podman exec -it {{ mawus_solr__container }} curl 'http://localhost:8983/solr/multimedia-categories/config/requestHandler?componentName=/maw-photos-query'"
+    cmd: "podman exec -it {{ maw_solr__container }} curl 'http://localhost:8983/solr/multimedia-categories/config/requestHandler?componentName=/maw-photos-query'"
   changed_when: false
   register: solr_handler_exists_result
 
 - name: add handler if it does not exist
   ansible.builtin.command:
-    cmd: "podman exec -it {{ mawus_solr__container }} curl -X POST -H 'Content-type:application/json' --data-binary '{ \"add-requesthandler\": {{ maw_request_handler_definition | to_json }} }' 'http://localhost:8983/solr/multimedia-categories/config'"
+    cmd: "podman exec -it {{ maw_solr__container }} curl -X POST -H 'Content-type:application/json' --data-binary '{ \"add-requesthandler\": {{ maw_request_handler_definition | to_json }} }' 'http://localhost:8983/solr/multimedia-categories/config'"
   when: not (solr_handler_exists_result.stdout | from_json).config.requestHandler['/maw-photos-query']
 
 - name: update handler if different
   ansible.builtin.command:
-    cmd: "podman exec -it {{ mawus_solr__container }} curl -X POST -H 'Content-type:application/json' --data-binary '{ \"update-requesthandler\": {{ maw_request_handler_definition | to_json }} }' 'http://localhost:8983/solr/multimedia-categories/config'"
+    cmd: "podman exec -it {{ maw_solr__container }} curl -X POST -H 'Content-type:application/json' --data-binary '{ \"update-requesthandler\": {{ maw_request_handler_definition | to_json }} }' 'http://localhost:8983/solr/multimedia-categories/config'"
   when: (solr_handler_exists_result.stdout | from_json).config.requestHandler['/maw-photos-query'] and maw_request_handler_definition != (solr_handler_exists_result.stdout | from_json).config.requestHandler['/maw-photos-query']
 
 - name: reload core for good measure
   ansible.builtin.command:
-    cmd: "podman exec -it {{ mawus_solr__container }} curl 'http://127.0.0.1:8983/solr/admin/cores?action=RELOAD&core=multimedia-categories'"
+    cmd: "podman exec -it {{ maw_solr__container }} curl 'http://127.0.0.1:8983/solr/admin/cores?action=RELOAD&core=multimedia-categories'"
   changed_when: true
