--- a/inventories/group_vars/maw_dev.yml
+++ b/inventories/group_vars/maw_dev.yml
@@ -107,25 +107,25 @@ maw_solr__indexer_sql_password: "{{ maw__sql_solr_password }}"
 maw_solr__indexer_calendar: '00:50:00'
 
 # mawus api settings
-mawus_api__pod: ""
-mawus_api__image: ""
-mawus_api__container: ""
-mawus_api__cert_dir: "{{ maw__certs_dir }}"
-mawus_api__cert_volume: ""
-mawus_api__dataprotection_dir: "{{ remote_mawus_root }}/dataprotection/api"
-mawus_api__dataprotection_volume: ""
-mawus_api__dataprotection_volume_to_migrate: ""
-mawus_api__envfile: "{{ maw__podman_env_dir }}/maw-api.env"
-mawus_api__envfile_backup: false
-mawus_api__aspnet_env: "{{ maw__aspnet_env }}"
-mawus_api__pfx: "{{ maw__pfx_api }}"
-mawus_api__pfx_pwd: ""
-mawus_api__sql_username: "{{ maw__sql_username }}"
-mawus_api__sql_password: "{{ maw__sql_password }}"
-mawus_api__upload_dir: "{{ maw__upload_dir }}"
-mawus_api__upload_volume: ""
-mawus_api__upload_volume_to_migrate: ""
-mawus_api__asset_dir_images: "{{ maw__asset_dir_images }}"
+maw_api__pod: ""
+maw_api__image: ""
+maw_api__container: ""
+maw_api__cert_dir: "{{ maw__certs_dir }}"
+maw_api__cert_volume: ""
+maw_api__dataprotection_dir: "{{ remote_mawus_root }}/dataprotection/api"
+maw_api__dataprotection_volume: ""
+maw_api__dataprotection_volume_to_migrate: ""
+maw_api__envfile: "{{ maw__podman_env_dir }}/maw-api.env"
+maw_api__envfile_backup: false
+maw_api__aspnet_env: "{{ maw__aspnet_env }}"
+maw_api__pfx: "{{ maw__pfx_api }}"
+maw_api__pfx_pwd: ""
+maw_api__sql_username: "{{ maw__sql_username }}"
+maw_api__sql_password: "{{ maw__sql_password }}"
+maw_api__upload_dir: "{{ maw__upload_dir }}"
+maw_api__upload_volume: ""
+maw_api__upload_volume_to_migrate: ""
+maw_api__asset_dir_images: "{{ maw__asset_dir_images }}"
 
 # mawus auth settings
 mawus_auth__pod: ""
