--- a/inventories/group_vars/maw_prod.yml
+++ b/inventories/group_vars/maw_prod.yml
@@ -108,25 +108,25 @@ maw_solr__indexer_sql_password: "{{ maw__sql_solr_password }}"
 maw_solr__indexer_calendar: '00:50:00'
 
 # mawus api settings
-mawus_api__pod: "{{ maw__podman_pod }}"
-mawus_api__image: "docker.io/aerisg222/maw-api:latest"
-mawus_api__container: "{{ maw__env }}-maw-api"
-mawus_api__cert_dir: ""
-mawus_api__cert_volume: "{{ maw__certs_volume }}"
-mawus_api__dataprotection_dir: ""
-mawus_api__dataprotection_volume: "{{ maw__env }}-maw-api-dataprotection"
-mawus_api__dataprotection_volume_to_migrate: ""
-mawus_api__envfile: "{{ maw__podman_env_dir }}/maw-api.env"
-mawus_api__envfile_backup: false
-mawus_api__aspnet_env: "{{ maw__aspnet_env }}"
-mawus_api__pfx: "{{ maw__pfx_api }}"
-mawus_api__pfx_pwd: ""
-mawus_api__sql_username: "{{ maw__sql_username }}"
-mawus_api__sql_password: "{{ maw__sql_password }}"
-mawus_api__upload_dir: ""
-mawus_api__upload_volume: "{{ maw__env }}-maw-upload"
-mawus_api__upload_volume_to_migrate: ""
-mawus_api__asset_dir_images: "{{ maw__asset_dir_images }}"
+maw_api__pod: "{{ maw__podman_pod }}"
+maw_api__image: "docker.io/aerisg222/maw-api:latest"
+maw_api__container: "{{ maw__env }}-maw-api"
+maw_api__cert_dir: ""
+maw_api__cert_volume: "{{ maw__certs_volume }}"
+maw_api__dataprotection_dir: ""
+maw_api__dataprotection_volume: "{{ maw__env }}-maw-api-dataprotection"
+maw_api__dataprotection_volume_to_migrate: ""
+maw_api__envfile: "{{ maw__podman_env_dir }}/maw-api.env"
+maw_api__envfile_backup: false
+maw_api__aspnet_env: "{{ maw__aspnet_env }}"
+maw_api__pfx: "{{ maw__pfx_api }}"
+maw_api__pfx_pwd: ""
+maw_api__sql_username: "{{ maw__sql_username }}"
+maw_api__sql_password: "{{ maw__sql_password }}"
+maw_api__upload_dir: ""
+maw_api__upload_volume: "{{ maw__env }}-maw-upload"
+maw_api__upload_volume_to_migrate: ""
+maw_api__asset_dir_images: "{{ maw__asset_dir_images }}"
 
 # mawus auth settings
 mawus_auth__pod: "{{ maw__podman_pod }}"
