updatae auth var names

--- a/inventories/group_vars/maw_dev.yml
+++ b/inventories/group_vars/maw_dev.yml
@@ -128,33 +128,33 @@ maw_api__upload_volume_to_migrate: ""
 maw_api__asset_dir_images: "{{ maw__asset_dir_images }}"
 
 # mawus auth settings
-mawus_auth__pod: ""
-mawus_auth__image: ""
-mawus_auth__container: ""
-mawus_auth__cert_dir: "{{ maw__certs_dir }}"
-mawus_auth__cert_volume: ""
-mawus_auth__dataprotection_dir: "{{ remote_mawus_root }}/dataprotection/auth"
-mawus_auth__dataprotection_volume: ""
-mawus_auth__dataprotection_volume_to_migrate: ""
-mawus_auth__envfile: "{{ maw__podman_env_dir }}/maw-auth.env"
-mawus_auth__envfile_backup: false
-mawus_auth__aspnet_env: "{{ maw__aspnet_env }}"
-mawus_auth__google_creds_volume: ""
-mawus_auth__google_email_creds_file:
-mawus_auth__pfx: "{{ maw__pfx_auth }}"
-mawus_auth__pfx_pwd:
-mawus_auth__sql_username: "{{ maw__sql_username }}"
-mawus_auth__sql_password: "{{ maw__sql_password }}"
-mawus_auth__www_auth_client_secret: "{{ vault_www_auth_client_secret }}"
-mawus_auth__google_plus_client_id: "{{ vault_google_plus_client_id }}"
-mawus_auth__google_plus_client_secret: "{{ vault_google_plus_client_secret }}"
-mawus_auth__twitter_client_id: "{{ vault_twitter_client_id }}"
-mawus_auth__twitter_client_secret: "{{ vault_twitter_client_secret }}"
-mawus_auth__microsoft_client_id: "{{ vault_microsoft_client_id }}"
-mawus_auth__microsoft_client_secret: "{{ vault_microsoft_client_secret }}"
-mawus_auth__github_client_id: "{{ vault_github_client_id }}"
-mawus_auth__github_client_secret: "{{ vault_github_client_secret }}"
-mawus_auth__pfx_signing: "{{ maw__pfx_signing }}"
+maw_auth__pod: ""
+maw_auth__image: ""
+maw_auth__container: ""
+maw_auth__cert_dir: "{{ maw__certs_dir }}"
+maw_auth__cert_volume: ""
+maw_auth__dataprotection_dir: "{{ remote_mawus_root }}/dataprotection/auth"
+maw_auth__dataprotection_volume: ""
+maw_auth__dataprotection_volume_to_migrate: ""
+maw_auth__envfile: "{{ maw__podman_env_dir }}/maw-auth.env"
+maw_auth__envfile_backup: false
+maw_auth__aspnet_env: "{{ maw__aspnet_env }}"
+maw_auth__google_creds_volume: ""
+maw_auth__google_email_creds_file:
+maw_auth__pfx: "{{ maw__pfx_auth }}"
+maw_auth__pfx_pwd:
+maw_auth__sql_username: "{{ maw__sql_username }}"
+maw_auth__sql_password: "{{ maw__sql_password }}"
+maw_auth__www_auth_client_secret: "{{ vault_www_auth_client_secret }}"
+maw_auth__google_plus_client_id: "{{ vault_google_plus_client_id }}"
+maw_auth__google_plus_client_secret: "{{ vault_google_plus_client_secret }}"
+maw_auth__twitter_client_id: "{{ vault_twitter_client_id }}"
+maw_auth__twitter_client_secret: "{{ vault_twitter_client_secret }}"
+maw_auth__microsoft_client_id: "{{ vault_microsoft_client_id }}"
+maw_auth__microsoft_client_secret: "{{ vault_microsoft_client_secret }}"
+maw_auth__github_client_id: "{{ vault_github_client_id }}"
+maw_auth__github_client_secret: "{{ vault_github_client_secret }}"
+maw_auth__pfx_signing: "{{ maw__pfx_signing }}"
 
 # mawus www settings
 mawus_www__pod: ""
