--- a/roles/maw_auth/meta/argument_specs.yml
+++ b/roles/maw_auth/meta/argument_specs.yml
@@ -3,137 +3,137 @@ argument_specs:
   main:
     short_description: Creates auth service and supporting objects for mikeandwan.us
     options:
-      mawus_auth__pod:
+      maw_auth__pod:
         type: str
         required: true
         description: Name of the pod in which the auth container should run
 
-      mawus_auth__image:
+      maw_auth__image:
         type: str
         required: true
         description: Fully qualified auth image to use
 
-      mawus_auth__container:
+      maw_auth__container:
         type: str
         required: true
         description: Name of the container
 
-      mawus_auth__cert_dir:
+      maw_auth__cert_dir:
         type: str
         required: true
         description: Local directory where the certificates are stored
 
-      mawus_auth__cert_volume:
+      maw_auth__cert_volume:
         type: str
         required: true
         description: Name of the volume where certificates are stored
 
-      mawus_auth__dataprotection_dir:
+      maw_auth__dataprotection_dir:
         type: str
         required: true
         description: Full path to directory where dataprotection files will be written
 
-      mawus_auth__dataprotection_volume:
+      maw_auth__dataprotection_volume:
         type: str
         required: true
         description: Name of the volume where data protection files are stored
 
-      mawus_auth__dataprotection_volume_to_migrate:
+      maw_auth__dataprotection_volume_to_migrate:
         type: str
         required: true
         description: Name of the previous volume where data protection files are stored and should be copied to the new volume
 
-      mawus_auth__envfile:
+      maw_auth__envfile:
         type: str
         required: true
         description: Path to the auth environment file
 
-      mawus_auth__envfile_backup:
+      maw_auth__envfile_backup:
         type: bool
         required: true
         description: Indicates if the existing envfile should be backed up before being overwritten
 
-      mawus_auth__aspnet_env:
+      maw_auth__aspnet_env:
         type: str
         required: true
         description: Specifies the environment for the aspnet application
 
-      mawus_auth__google_creds_volume:
+      maw_auth__google_creds_volume:
         type: str
         required: true
         description: The volume where the google credentials are stored
 
-      mawus_auth__google_email_creds_file:
+      maw_auth__google_email_creds_file:
         type: str
         required: true
         description: The path to the google credentials file
 
-      mawus_auth__pfx:
+      maw_auth__pfx:
         type: str
         required: true
         description: Path to the auth pfx file
 
-      mawus_auth__pfx_pwd:
+      maw_auth__pfx_pwd:
         type: str
         required: true
         description: The password for the auth pfx
 
-      mawus_auth__sql_username:
+      maw_auth__sql_username:
         type: str
         required: true
         description: The name of the user to connect to postgres
 
-      mawus_auth__sql_password:
+      maw_auth__sql_password:
         type: str
         required: true
         description: The password for the postgres user
 
-      mawus_auth__www_auth_client_secret:
+      maw_auth__www_auth_client_secret:
         type: str
         required: true
         description: The client secret for the www site for OAuth
 
-      mawus_auth__google_plus_client_id:
+      maw_auth__google_plus_client_id:
         type: str
         required: true
         description: The google client id for OAuth
 
-      mawus_auth__google_plus_client_secret:
+      maw_auth__google_plus_client_secret:
         type: str
         required: true
         description: The google client secret for OAuth
 
-      mawus_auth__twitter_client_id:
+      maw_auth__twitter_client_id:
         type: str
         required: true
         description: The twitter client id for OAuth
 
-      mawus_auth__twitter_client_secret:
+      maw_auth__twitter_client_secret:
         type: str
         required: true
         description: The twitter client secret for OAuth
 
-      mawus_auth__microsoft_client_id:
+      maw_auth__microsoft_client_id:
         type: str
         required: true
         description: The microsoft client id for OAuth
 
-      mawus_auth__microsoft_client_secret:
+      maw_auth__microsoft_client_secret:
         type: str
         required: true
         description: The microsoft client secret for OAuth
 
-      mawus_auth__github_client_id:
+      maw_auth__github_client_id:
         type: str
         required: true
         description: The github client id for OAuth
 
-      mawus_auth__github_client_secret:
+      maw_auth__github_client_secret:
         type: str
         required: true
         description: The github client secret for OAuth
 
-      mawus_auth__pfx_signing:
+      maw_auth__pfx_signing:
         type: str
         required: true
         description: The certificate used for signing data in the app
