--- a/inventories/group_vars/maw_prod.yml
+++ b/inventories/group_vars/maw_prod.yml
@@ -158,26 +158,26 @@ maw_auth__github_client_secret: "{{ vault_github_client_secret }}"
 maw_auth__pfx_signing: "{{ maw__pfx_signing }}"
 
 # mawus www settings
-mawus_www__pod: "{{ maw__podman_pod }}"
-mawus_www__image: "docker.io/aerisg222/maw-www:latest"
-mawus_www__container: "{{ maw__env }}-maw-www"
-mawus_www__cert_dir: ""
-mawus_www__cert_volume: "{{ maw__certs_volume }}"
-mawus_www__dataprotection_dir: ""
-mawus_www__dataprotection_volume: "{{ maw__env }}-maw-www-dataprotection"
-mawus_www__dataprotection_volume_to_migrate: ""
-mawus_www__envfile: "{{ maw__podman_env_dir }}/maw-www.env"
-mawus_www__envfile_backup: false
-mawus_www__pfx: "{{ maw__pfx_www }}"
-mawus_www__pfx_pwd:
-mawus_www__aspnet_env: "{{ maw__aspnet_env }}"
-mawus_www__google_creds_volume: "{{ maw__google_creds_volume }}"
-mawus_www__google_email_creds_file: "{{ maw__google_email_creds_file }}"
-mawus_www__sql_username: "{{ maw__sql_username }}"
-mawus_www__sql_password: "{{ maw__sql_password }}"
-mawus_www__auth_client_id: "{{ vault_www_auth_client_id }}"
-mawus_www__auth_client_secret: "{{ vault_www_auth_client_secret }}"
-mawus_www__google_recaptcha_site_key: "{{ vault_google_recaptcha_site_key }}"
-mawus_www__google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
-mawus_www__asset_dir_images: "{{ maw__asset_dir_images }}"
-mawus_www__asset_dir_movies: "{{ maw__asset_dir_movies }}"
+maw_www__pod: "{{ maw__podman_pod }}"
+maw_www__image: "docker.io/aerisg222/maw-www:latest"
+maw_www__container: "{{ maw__env }}-maw-www"
+maw_www__cert_dir: ""
+maw_www__cert_volume: "{{ maw__certs_volume }}"
+maw_www__dataprotection_dir: ""
+maw_www__dataprotection_volume: "{{ maw__env }}-maw-www-dataprotection"
+maw_www__dataprotection_volume_to_migrate: ""
+maw_www__envfile: "{{ maw__podman_env_dir }}/maw-www.env"
+maw_www__envfile_backup: false
+maw_www__pfx: "{{ maw__pfx_www }}"
+maw_www__pfx_pwd:
+maw_www__aspnet_env: "{{ maw__aspnet_env }}"
+maw_www__google_creds_volume: "{{ maw__google_creds_volume }}"
+maw_www__google_email_creds_file: "{{ maw__google_email_creds_file }}"
+maw_www__sql_username: "{{ maw__sql_username }}"
+maw_www__sql_password: "{{ maw__sql_password }}"
+maw_www__auth_client_id: "{{ vault_www_auth_client_id }}"
+maw_www__auth_client_secret: "{{ vault_www_auth_client_secret }}"
+maw_www__google_recaptcha_site_key: "{{ vault_google_recaptcha_site_key }}"
+maw_www__google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
+maw_www__asset_dir_images: "{{ maw__asset_dir_images }}"
+maw_www__asset_dir_movies: "{{ maw__asset_dir_movies }}"
