--- a/roles/maw_www/tasks/container_hosted.yml
+++ b/roles/maw_www/tasks/container_hosted.yml
@@ -1,41 +1,41 @@
 ---
 - name: pull www image
   containers.podman.podman_image:
-    name: "{{ mawus_www__image }}"
+    name: "{{ maw_www__image }}"
 
 - name: create www dataprotection volume
   containers.podman.podman_volume:
-    name: "{{ mawus_www__dataprotection_volume }}"
+    name: "{{ maw_www__dataprotection_volume }}"
     state: present
-  register: _mawus_www__dataprotection_volume_result
+  register: _maw_www__dataprotection_volume_result
 
 - name: migrate www dataprotection files from original volume
   ansible.builtin.include_role:
     name: podman_copy
   when: >
-    _mawus_www__dataprotection_volume_result.changed
+    _maw_www__dataprotection_volume_result.changed
     and
-    mawus_www__dataprotection_volume_to_migrate | length > 0
+    maw_www__dataprotection_volume_to_migrate | length > 0
   vars:
     pod_cp__skip_if_src_not_exists: true
-    pod_cp__src_dir_or_volume: "{{ mawus_www__dataprotection_volume_to_migrate }}"
-    pod_cp__dest_dir_or_volume: "{{ mawus_www__dataprotection_volume }}"
+    pod_cp__src_dir_or_volume: "{{ maw_www__dataprotection_volume_to_migrate }}"
+    pod_cp__dest_dir_or_volume: "{{ maw_www__dataprotection_volume }}"
 
 - name: maw-www container
   containers.podman.podman_container:
-    name: "{{ mawus_www__container }}"
-    pod: "{{ mawus_www__pod }}"
-    image: "{{ mawus_www__image }}"
+    name: "{{ maw_www__container }}"
+    pod: "{{ maw_www__pod }}"
+    image: "{{ maw_www__image }}"
     state: started
-    env_file: "{{ mawus_www__envfile }}/"
+    env_file: "{{ maw_www__envfile }}/"
     security_opt:
       - label=disable
     volume:
-      - "{{ mawus_www__cert_volume }}:/certs:ro,z"
-      - "{{ mawus_www__dataprotection_volume }}:/dataprotection:rw,Z"
-      - "{{ mawus_www__google_creds_volume }}:/google-creds:ro,z"
-      - "{{ mawus_www__asset_dir_images }}:/srv/www/website_assets/images:ro"
-      - "{{ mawus_www__asset_dir_movies }}:/srv/www/website_assets/movies:ro"
+      - "{{ maw_www__cert_volume }}:/certs:ro,z"
+      - "{{ maw_www__dataprotection_volume }}:/dataprotection:rw,Z"
+      - "{{ maw_www__google_creds_volume }}:/google-creds:ro,z"
+      - "{{ maw_www__asset_dir_images }}:/srv/www/website_assets/images:ro"
+      - "{{ maw_www__asset_dir_movies }}:/srv/www/website_assets/movies:ro"
     label:
       io.containers.autoupdate: image
 
@@ -43,4 +43,4 @@
   ansible.builtin.include_role:
     name: podman_wait_for_start
   vars:
-    pod_start__container_name: "{{ mawus_www__container }}"
+    pod_start__container_name: "{{ maw_www__container }}"
