--- a/roles/maw_www/tasks/main.yml
+++ b/roles/maw_www/tasks/main.yml
@@ -4,15 +4,15 @@
     name: maw_envfile
   vars:
     mawus_env__template: maw-www.env.j2
-    mawus_env__path: "{{ mawus_www__envfile }}"
-    mawus_env__backup: "{{ mawus_www__envfile_backup }}"
+    mawus_env__path: "{{ maw_www__envfile }}"
+    mawus_env__backup: "{{ maw_www__envfile_backup }}"
 
 - name: configure natively hosted www site
   ansible.builtin.include_tasks:
     file: native_hosted.yml
-  when: mawus_www__image | length == 0
+  when: maw_www__image | length == 0
 
 - name: configure container hosted www site
   ansible.builtin.include_tasks:
     file: container_hosted.yml
-  when: mawus_www__image | length > 0
+  when: maw_www__image | length > 0
