--- a/roles/mikeandwan_us/tasks/maw_maintenance.yml
+++ b/roles/mikeandwan_us/tasks/maw_maintenance.yml
@@ -18,13 +18,13 @@
   ansible.builtin.include_role:
     name: reverse_geocoder
   vars:
-    rev_geo__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    rev_geo__service: "{{ maw__env }}-reverse-geocoder"
-    rev_geo__pod: "{{ maw__podman_pod }}"
-    rev_geo__volume: "{{ reverse_geocode_volume.volume.Name }}"
-    rev_geo__envfile: "{{ maw__podman_env_dir }}/maw-reverse-geocode.env"
-    rev_geo__image: "{{ maw__podman_image_reverse_geocode }}"
-    rev_geo__calendar: '00:45:00'
+    maw_revgeo__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
+    maw_revgeo__service: "{{ maw__env }}-reverse-geocoder"
+    maw_revgeo__pod: "{{ maw__podman_pod }}"
+    maw_revgeo__volume: "{{ reverse_geocode_volume.volume.Name }}"
+    maw_revgeo__envfile: "{{ maw__podman_env_dir }}/maw-reverse-geocode.env"
+    maw_revgeo__image: "{{ maw__podman_image_reverse_geocode }}"
+    maw_revgeo__calendar: '00:45:00'
 
 - name: Configure Postgres Role Backup
   ansible.builtin.include_role:
